@@ -2,6 +2,7 @@ Revision history for exact
 
 {{$NEXT}}
         - Add export() and exportable() methods
+        - Switch from Try::Tiny to Syntax::Keyword::Try
 
 1.14      2021-01-10 15:43:05-08:00 America/Los_Angeles
         - Migrate to Test2::V0
